@@ -16,6 +16,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - suminf is now sensitive to bit precision. In library mode, use
     suminf_bitprec (precision in bits) rather than the historical suminf
     (precision in words)
+  - renamed libpari function rootsof1 -> nfrootsof1
+  - removed libpari function rootsof1_kannan: use nfrootsof1
 
 * Specific to the PARI library:
 ===============================
