@@ -1,6 +1,6 @@
 Function: nfrootsof1
 Section: number_fields
-C-Name: rootsof1
+C-Name: nfrootsof1
 Prototype: G
 Help: nfrootsof1(nf): number of roots of unity and primitive root of unity
  in the number field nf.
@@ -23,9 +23,3 @@ Doc: Returns a two-component vector $[w,z]$ where $w$ is the number of roots of
  \var{nf} (both of them polynomially bounded in terms of the size of the
  discriminant). Fields of degree up to $100$ or so should require less than
  one minute.
-Variant: Also available is \fun{GEN}{rootsof1_kannan}{GEN nf}, that computes
- all algebraic integers of $T_2$ norm equal to the field degree
- (all roots of $1$, by Kronecker's theorem). This is in general a little
- faster than the default when there \emph{are} roots of $1$ in the field
- (say twice faster), but can be much slower (say, \emph{days} slower), since
- the algorithm is a priori exponential in the field degree.
